<resources>
    <string name="app_name">Trình phát nhạc</string>
    <string name="shuffle_btn">Ngẫu nhiên</string>
    <string name="favourites_btn">Yêu thích</string>
    <string name="playlist_btn">Danh sách phát</string>
    <string name="total_songs">Tổng số bài hát</string>
    <string name="world_of_music">Thế giới âm nhạc</string>
    <string name="song_name">Tên bài hát</string>
    <string name="back_btn">Quay lại</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Đang tải...</string>
    <string name="repeat_btn">Lặp lại</string>
    <string name="equalizer_btn">Bộ chỉnh âm</string>
    <string name="timer_btn">Hẹn giờ</string>
    <string name="share_btn">Chia sẻ</string>
    <string name="open">Mở</string>
    <string name="close">Đóng</string>
    <string name="app_icon">Biểu tượng</string>
    <string name="text_nav">Chào mừng bạn đến với\nThế giới âm nhạc</string>
    <string name="feedback">Phản hồi</string>
    <string name="settings">Cài đặt</string>
    <string name="about">Giới thiệu</string>
    <string name="exit">Thoát</string>
    <string name="song_album">Album bài hát</string>
    <string name="min_15">15 phút</string>
    <string name="min_30">30 phút</string>
    <string name="min_60">60 phút</string>
    <string name="search_view">Tìm kiếm</string>
    <string name="song_img">Hình ảnh bài hát</string>
    <string name="playlist_name">Tên danh sách phát</string>
    <string name="playlist_delete">Xóa</string>
    <string name="user_name">Tên của bạn</string>
    <string name="add_song">Thêm</string>
    <string name="remove_all">Xóa tất cả</string>
    <string name="search_song">Tìm bài hát</string>
    <string name="topic_feedback">Chủ đề ví dụ: Gợi ý, Lỗi, v.v.</string>
    <string name="email_feedback">Địa chỉ email (Tùy chọn)</string>
    <string name="send">Gửi</string>
    <string name="set_theme">Đặt chủ đề</string>
    <string name="sort_by">Sắp xếp theo</string>
    <string name="version_name">Tên phiên bản</string>
    <string name="play_next">Phát tiếp theo</string>
    <string name="play_next_note">Mẹo: Nhấn giữ bất kỳ video nào để thêm vào danh sách phát tiếp theo. &#128522;</string>
    <string name="favourite_note">Mẹo: Phát nhạc và nhấn &#10084; để thêm vào yêu thích.</string>
    <string name="playlist_note">Mẹo: Nhấn ➕ để tạo danh sách phát mới.</string>
</resources>
